--- a/qt/build.xml
+++ b/qt/build.xml
@@ -53,7 +53,7 @@ limitations under the License.
 	<!-- =================================================================== -->
 	<!-- Implement the standard targets                                      -->
 	<!-- =================================================================== -->
-	<target name="all" depends="export,doc" description="Build everything. This is the target that the build should run."/>
+	<target name="all" depends="export" description="Build everything. This is the target that the build should run."/>
 
 	<target name="clean" description="Remove all generated files to start from scratch">
 		<sequential>
@@ -115,7 +115,7 @@ limitations under the License.
 		</copy>
 	</target>
 	
-	<target name="test.qt.nodeunit" depends="filereader" description="Run the unit tests in the qt test framework. Make sure you have Qt 5.4 or later, and it is the first Qt in your path.">
+	<target name="test.all" depends="filereader" description="Run the unit tests in the qt test framework. Make sure you have Qt 5.4 or later, and it is the first Qt in your path.">
 		<sequential>
 			<exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
 				<env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -128,7 +128,7 @@ limitations under the License.
 		</sequential>
 	</target>
 
-    <target name="test.address.nu" depends="filereader" description="Run the address unit tests in the qt test framework.">
+    <target name="test.address" depends="filereader" description="Run the address unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -141,7 +141,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.calendar.nu" depends="export" description="Run the calendar unit tests in the qt test framework.">
+    <target name="test.calendar" depends="export" description="Run the calendar unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -154,7 +154,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.collate.nu" depends="export" description="Run the collate unit tests in the qt test framework.">
+    <target name="test.collate" depends="export" description="Run the collate unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -167,7 +167,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.ctype.nu" depends="export" description="Run the ctype unit tests in the qt test framework.">
+    <target name="test.ctype" depends="export" description="Run the ctype unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -180,7 +180,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.date.nu" depends="export" description="Run the date unit tests in the qt test framework.">
+    <target name="test.date" depends="export" description="Run the date unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -193,7 +193,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.daterange.nu" depends="export" description="Run the daterange unit tests in the qt test framework.">
+    <target name="test.daterange" depends="export" description="Run the daterange unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -206,7 +206,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.durfmt.nu" depends="export" description="Run the durfmt unit tests in the qt test framework.">
+    <target name="test.durfmt" depends="export" description="Run the durfmt unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -219,7 +219,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.maps.nu" depends="export" description="Run the maps unit tests in the qt test framework.">
+    <target name="test.maps" depends="export" description="Run the maps unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -232,7 +232,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.name.nu" depends="export" description="Run the name unit tests in the qt test framework.">
+    <target name="test.name" depends="export" description="Run the name unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -245,7 +245,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.number.nu" depends="export" description="Run the number unit tests in the qt test framework.">
+    <target name="test.number" depends="export" description="Run the number unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -258,7 +258,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.phone.nu" depends="export" description="Run the phone unit tests in the qt test framework.">
+    <target name="test.phone" depends="export" description="Run the phone unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -271,7 +271,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.root.nu" depends="export" description="Run the root unit tests in the qt test framework.">
+    <target name="test.root" depends="export" description="Run the root unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -284,7 +284,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.strings_ext.nu" depends="export" description="Run the strings_ext unit tests in the qt test framework.">
+    <target name="test.strings_ext" depends="export" description="Run the strings_ext unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -297,7 +297,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.units.nu" depends="export" description="Run the units unit tests in the qt test framework.">
+    <target name="test.units" depends="export" description="Run the units unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -310,7 +310,7 @@ limitations under the License.
         </sequential>
     </target>
 
-    <target name="test.util.nu" depends="export" description="Run the util unit tests in the qt test framework.">
+    <target name="test.util" depends="export" description="Run the util unit tests in the qt test framework.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -322,10 +322,5 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-		
-	<!-- Should not run the tests from an automated build, because qmlscene doesn't exit at the end. They should
-	     only be run by hand. -->
 	<target name="test" description="Run all tests and build all reports" />
-	<target name="doc" />
-	
 </project>
